Add phrase queries benchmark